diesel_derives/src/tests/snapshots/diesel_derives__tests__has_query_check_for_backend_disable_1 (postgres).snap
---
source: diesel_derives/src/tests/mod.rs
expression: out
info:
  input: "#[derive(HasQuery)]\n#[diesel(check_for_backend(disable = true))]\nstruct User {\n    id: i32,\n    name: String,\n}\n"
---
::core::compile_error! {
    "expected `,`"
}
